# haskell_greeter

./: greeter.cabal
app/: Main.hs
src/Domain/: Reader.hs  Writer.hs
src/UseCases/: GreetUser.hs
test/Fakes/: InputOutput.hs
test/Fakes/Domain/Reader/: InputOutputStateReader.hs
test/Fakes/Domain/Writer/: InputOutputStateWriter.hs
test/UseCases/: GreetUserSpec.hs
