name:                greeter
version:             0.1.0.0
synopsis:            toy command line app for testing logic in isolation of IO
homepage:            http://github.com/professaa/haskell_greeter
author:              Aaron Levine
maintainer:          professaa@gmail.com
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UseCases.GreetUser
                     , Domain.Writer
                     , Domain.Reader
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable greeter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , greeter
  default-language:    Haskell2010

test-suite greeter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , greeter
                     , mtl
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/greeter
